deploy/stock-ticker/stock-ticker/templates/service.yaml
---
# Source: stock-ticker/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker
  labels:
    app: stock-ticker
spec:
  type: LoadBalancer
  selector:
    app: stock-ticker
  ports:
  - name: http
    port: 8080
    targetPort: http
